# semantiva

./: .buildinfo  .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CNAME  MANIFEST.in  NOTICE  README.md  api_reference.html  ci_pipeline.sh  cli.html  collection_modifiers.html  concepts.html  context_processors.html  context_type.html  contracts.html  contracts_catalog.html  creating_components.html  data_collections.html  data_io.html  data_operations.html  data_probes.html  data_processors.html  data_types.html  examples_index.html  exceptions.html  execution.html  extensions.html  genindex.html  getting_started.html  glossary.html  graph.html  identity_cheatsheet.html  index.html  inspection.html  introspection_validation.html  logger.html  make_docs.sh  modules.html  (+49 more)
.doctrees/: api_reference.doctree  cli.doctree  collection_modifiers.doctree  concepts.doctree  context_processors.doctree  context_type.doctree  contracts.doctree  contracts_catalog.doctree  creating_components.doctree  data_collections.doctree  data_io.doctree  data_operations.doctree  data_probes.doctree  data_processors.doctree  data_types.doctree  environment.pickle  examples_index.doctree  exceptions.doctree  execution.doctree  extensions.doctree  getting_started.doctree  glossary.doctree  graph.doctree  identity_cheatsheet.doctree  index.doctree  inspection.doctree  introspection_validation.doctree  logger.doctree  modules.doctree  pipeline.doctree  pipelines_python.doctree  pipelines_yaml.doctree  registry_and_extensions.doctree  run_space.doctree  run_space_emission.doctree  run_space_lifecycle.doctree  schema_semantic_execution_record_v1.doctree  semantiva.component_loader.doctree  semantiva.configurations.doctree  semantiva.context_operations.doctree  (+30 more)
_modules/: index.html
_sources/: api_reference.rst.txt  cli.rst.txt  collection_modifiers.rst.txt  concepts.rst.txt  context_processors.rst.txt  contracts.rst.txt  data_operations.rst.txt  data_processors.rst.txt  data_types.rst.txt  examples_index.rst.txt  execution.rst.txt  extensions.rst.txt  getting_started.rst.txt  glossary.rst.txt  graph.rst.txt  index.rst.txt  introspection_validation.rst.txt  logger.rst.txt  modules.rst.txt  pipeline.rst.txt  pipelines_yaml.rst.txt  run_space.rst.txt  run_space_emission.rst.txt  run_space_lifecycle.rst.txt  semantiva.component_loader.rst.txt  semantiva.configurations.rst.txt  semantiva.context_operations.rst.txt  semantiva.context_processors.rst.txt  semantiva.core.rst.txt  semantiva.data_io.rst.txt  semantiva.data_operations.rst.txt  semantiva.data_processors.rst.txt  semantiva.data_types.rst.txt  semantiva.examples.rst.txt  semantiva.exceptions.rst.txt  semantiva.execution_tools.executor.rst.txt  semantiva.execution_tools.job_queue.rst.txt  semantiva.execution_tools.orchestrator.rst.txt  semantiva.execution_tools.rst.txt  semantiva.execution_tools.transport.rst.txt  (+15 more)
_static/: copybutton.js
architecture/: context_processing.html  overview.html  pipeline_schema.html  registry.html
development/: testing_strategies.html
docs/: Makefile  cli.md  make.bat
doctrees/: api_reference.doctree  concepts.doctree  context_processors.doctree  data_io.doctree  data_processors.doctree  data_types.doctree  environment.pickle  examples_index.doctree  exceptions.doctree  execution.doctree  getting_started.doctree  glossary.doctree  graph.doctree  index.doctree  introspection_validation.doctree  logger.doctree  pipeline.doctree  registry_and_extensions.doctree  studio_viewer.doctree  trace_graph_alignment.doctree  tracing.doctree  workflows_fitting_models.doctree
examples/: test_params_pipeline.yaml
html/: .buildinfo  api_reference.html  concepts.html  context_processors.html  data_io.html  data_processors.html  data_types.html  examples_index.html  exceptions.html  execution.html  genindex.html  getting_started.html  glossary.html  graph.html  index.html  introspection_validation.html  logger.html  objects.inv  pipeline.html  py-modindex.html  registry_and_extensions.html  search.html  searchindex.js  studio_viewer.html  trace_graph_alignment.html  tracing.html  workflows_fitting_models.html
personas/: architects_system_designers.html  framework_developers.html  pipeline_users.html
scripts/: __init__.py  check_license_headers.py
semantiva/: __init__.py  cli.py  semantiva.py
tests/: _metadata_expectations.py  conftest.py  hello_pipeline.yaml  parametric_sweep_demo.yaml  pipeline_config.yaml  pipeline_model_fitting.yaml  simple_pipeline.yaml  test_audio_algorithm.py  test_audio_operation.py  test_audio_pipeline.py  test_base_data_types.py  (+151 more)
(+397 files in other folders)
